--- a/src/gwas/mypy.ini
+++ b/src/gwas/mypy.ini
@@ -1,5 +1,1 @@
-[mypy]
-check_untyped_defs = True
-ignore_missing_imports = True
-python_version = 3.11
-plugins = numpy.typing.mypy_plugin
+../../mypy.ini
