--- a/src/gwas/pytest.ini
+++ b/src/gwas/pytest.ini
@@ -4,5 +4,5 @@ markers =
 
 # https://docs.pytest.org/en/stable/logging.html#live-logs
 log_cli = true
-log_cli_level = INFO
+log_cli_level = DEBUG
 log_cli_format = %(asctime)s [%(levelname)8s] %(funcName)s: %(message)s (%(filename)s:%(lineno)s)
