--- a/src/gwas/pyproject.toml
+++ b/src/gwas/pyproject.toml
@@ -5,13 +5,15 @@ dynamic = ["version"]
 requires-python = ">=3.11"
 
 dependencies = [
-  "numpy",
+  "numpy>=1.22",
   "scipy",
   "pandas",
   "matplotlib",
   "seaborn",
   "torch<2",
+  "networkx",
   "threadpoolctl",
+  "tqdm",
 ]
 
 [project.scripts]
