Fix calculation issues and create updated unit tests
- Add the `raremetalworker-debug` recipe to the conda build, which is
  patched to output intermediate values for debugging purposes
- Parse these outputs and compare them to the what our functions
  generate
- Fixed an issue where we used the square root of the inverse variance
  instead of the inverse to calculate the denominator
- Adapted the null model `minus_two_log_likelihood` to be identical
  to the raremetalworker implementation
- Renamed `iv` and `ivsr` variables for more clarity
- Add a `--chromosome` command line option to the `score` command
  to allow for running only specific chromosomes
- Set the default null model method to FaSTLMM, because it performs
  best in the new tests. The other methods don't seem to converge to
  the same global optimum
- Also test chromosome X via a pytest parameterization

--- a/recipes/gwas/meta.yaml
+++ b/recipes/gwas/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - wheel
   run:
     - mkl
+    # Python dependencies
     - "python>=3.11"
     - "numpy>=1.22"
     - scipy
@@ -34,6 +35,15 @@ requirements:
     - threadpoolctl
     - tqdm
     - pyyaml
+    - more-itertools
+    - typing_extensions
+    # Compression tools
+    - zstd
+    - lrzip
+    - htslib
+    - xz
+    - bzip2
+    - lz4-c
 
 test:
   commands:
