--- a/src/gwas/pyproject.toml
+++ b/src/gwas/pyproject.toml
@@ -29,6 +29,7 @@ requires = [
   "cython>=3b1",
   "numpy",
   "setuptools>=62",
+  "setuptools-rust>=1.7.0",
   "setuptools_scm[toml]>=6.2",
   "wheel",
 ]
@@ -43,6 +44,16 @@ profile = "black"
 
 [tool.pylint.format]
 max-line-length = "88"
+
+[tool.pytest.ini_options]
+markers = ["slow: marks tests that run much longer than most"]
+log_cli = true
+log_cli_level = "DEBUG"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(funcName)s: %(message)s (%(filename)s:%(lineno)s)"
+
+# [[tool.setuptools-rust.ext-modules]]
+# target = "gwas._rust"
+# path = "src/rust/Cargo.toml"
 
 [tool.setuptools_scm]
 version_scheme = "no-guess-dev"
