--- a/recipes/gwas/meta.yaml
+++ b/recipes/gwas/meta.yaml
@@ -9,6 +9,7 @@ requirements:
   build:
     - {{ compiler("c") }}
     - {{ compiler("cxx") }}
+    - {{ compiler('rust') }}
     - "sysroot_linux-64>=2.17"
   host:
     - "cython>=3b1"
@@ -19,6 +20,7 @@ requirements:
     - pip
     - "setuptools>=62"
     - "setuptools_scm>=6.2"
+    - "setuptools-rust"
     - wheel
   run:
     - mkl
