--- a/recipes/gwas/meta.yaml
+++ b/recipes/gwas/meta.yaml
@@ -26,7 +26,7 @@ requirements:
   run:
     - mkl
     # Python dependencies
-    - "python>=3.11"
+    - "python=3.11"
     - "numpy>=1.22"
     - scipy
     - pandas
