Fix memory leaks and add regression tests

--- a/src/gwas/pyproject.toml
+++ b/src/gwas/pyproject.toml
@@ -53,6 +53,7 @@ select = [
     "N", # pep8-naming
     "C90", # McCabe complexity
     "PD", # pandas-vet
+    "PTH", # flake8-use-pathlib
 ]
 
 [tool.pytest.ini_options]
