--- a/src/gwas/pyproject.toml
+++ b/src/gwas/pyproject.toml
@@ -25,6 +25,7 @@ score = "gwas.score.cli:main"
 stratify = "gwas.stratify.cli:main"
 transpose = "gwas.transpose.cli:main"
 tri = "gwas.tri.cli:main"
+upload-score = "gwas.upload_score.cli:main"
 
 [build-system]
 requires = [
