Fix performance bottlenecks
- Switch to always using blosc2 for caching SharedArray on disk. This
  improved the performance of calculating eigendecompositions, because a
  big bottleneck was the time it took to read the triangular matrices
  from disk
- Add a global lock to enable allocating from the SharedWorkspace
  concurrently
- Also improve concurrency for the plot command and fix race condition

--- a/recipes/gwas/meta.yaml
+++ b/recipes/gwas/meta.yaml
@@ -7,12 +7,12 @@ source:
 
 requirements:
   build:
-    - {{ compiler("c") }}
-    - {{ compiler("cxx") }}
-    - {{ compiler("rust") }}
+    - "{{ compiler('c') }}"
+    - "{{ compiler('cxx') }}"
+    - "{{ compiler('rust') }}"
     - "sysroot_linux-64>=2.17"
   host:
-    - python
+    - "python>=3.12"
     - "cython>=3b1"
     - mkl
     - mkl-include
@@ -23,6 +23,7 @@ requirements:
     - "setuptools_scm>=6.2"
     - "setuptools-rust"
     - wheel
+    - c-blosc2
     - zlib
   run:
     - python
