--- a/recipes/gwas/meta.yaml
+++ b/recipes/gwas/meta.yaml
@@ -9,7 +9,7 @@ requirements:
   build:
     - "{{ compiler('c') }}"
     - "{{ compiler('cxx') }}"
-    - "{{ compiler('rust') }}"
+    # - "{{ compiler('rust') }}"
     - "sysroot_linux-64>=2.17"
   host:
     - "python>=3.12"
@@ -21,7 +21,7 @@ requirements:
     - pip
     - "setuptools>=62"
     - "setuptools_scm>=6.2"
-    - "setuptools-rust"
+    # - "setuptools-rust"
     - wheel
     - zlib
   run:
@@ -40,12 +40,15 @@ requirements:
     - tqdm
     - pyyaml
     - mkl
+    - universal_pathlib
     # compression tools
     - zstd
     - htslib
     - xz
     - bzip2
     - lz4-c
+    - python-blosc2
+    - pyarrow
     # genetics tools
     - bcftools >=1.17
     - gcta
@@ -54,7 +57,8 @@ requirements:
     - raremetal
     - tabix
     # transfer tools
-    # - upload
+    - upload
+    - sshfs
 
 test:
   commands:
