--- a/src/gwas/pyproject.toml
+++ b/src/gwas/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
   "tqdm",
   "pyyaml",
   "typing_extensions",
+  "universal_pathlib",
 ]
 
 [project.scripts]
@@ -69,8 +70,7 @@ ignore = [
 markers = ["slow: marks tests that run much longer than most"]
 log_cli = true
 log_cli_level = "DEBUG"
-log_cli_format = "%(asctime)s [%(levelname)8s] [%(processName)14s] %(funcName)s: %(message)s (%(filename)s:%(lineno)s)"
-
+log_cli_format = "%(asctime)s [%(name)16s] [%(levelname)8s] [%(processName)20s] %(funcName)s: %(message)s (%(filename)s:%(lineno)s)"
 [tool.setuptools_scm]
 version_scheme = "no-guess-dev"
 root = "../../"
