--- a/src/gwas/pytest.ini
+++ b/src/gwas/pytest.ini
@@ -2,5 +2,5 @@
 markers =
     slow: marks tests that run much longer than most
 log_cli = true
-log_cli_level = DEBUG
+log_cli_level = INFO
 log_cli_format = %(asctime)s [%(name)16s] [%(levelname)8s] [%(processName)20s] %(funcName)s: %(message)s (%(filename)s:%(lineno)s)
